--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,13 +50,20 @@
     <string name="preferences_title_for_header_and_footer_url">URL</string>
     <string name="preferences_title_for_header_and_footer_add_custom_urls">Add URL</string>
     <string name="preferences_title_for_header_and_footer_edit_custom_urls">Edit URL</string>
+    <string name="preferences_title_for_header_and_footer_widget_commands">Widget Commands</string>
     <string name="preferences_title_for_header_and_footer_accent_color">Accent Color</string>
+    <string name="preferences_title_for_header_home_screen_default_items">Home Screen</string>
+    <string name="preferences_title_for_footer_home_screen_default_items">Default Items</string>
+    <string name="preferences_title_for_header_and_footer_home_screen_add_widget">Add Widget</string>
+    <string name="preferences_title_for_header_and_footer_widget">Widget</string>
 
     <!-- Preferences categories, main screen -->
     <string name="preferences_category_main">General</string>
     <string name="preferences_category_appearance">Appearance</string>
     <string name="preferences_category_apps">Launching Apps</string>
     <string name="preferences_category_urls">Web Pages and Searches</string>
+    <string name="preferences_category_custom_commands">Custom commands</string>
+    <string name="preferences_category_home_screen">Home Screen</string>
     <string name="preferences_category_advanced">Advanced</string>
 
     <!-- Preferences items, main screen -->
@@ -77,6 +84,9 @@
     <string name="preferences_item_default_search_title">Default Search Engine</string>
     <string name="preferences_item_default_search_summary">Always show specific search engine on the bottom of list</string>
     <string name="preferences_item_default_search_option_none">(None)</string>
+    <string name="preferences_item_custom_commands_widgets">Widget commands (experimental)</string>
+    <string name="preferences_item_home_screen_default_items">Home screen items</string>
+    <string name="preferences_item_home_screen_default_items_summary">Display results and widgets when nothing is input at home screen, when Blue Line Console is set to home app.</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">Notify English input to keyboard input software on command input window</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">Command input window uses setImeHintLocales and sets to English locale. Behavior differs between keyboard input softwares.</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">Set IME_FLAG_FORCE_ASCII flag on command input window</string>
@@ -101,14 +111,36 @@
     <string name="preferences_accent_color_blue">Blue</string>
     <string name="preferences_accent_color_theme_without_accent_color">Current theme (%1$s) does not support changing accent color.</string>
 
+    <!-- Preferences item, home screen default items screens -->
+    <string name="preferences_home_screen_add_command_button">Add command</string>
+    <string name="preferences_home_screen_add_widget_button">Add widget (experimental)</string>
+    <string name="preferences_home_screen_add_widget_select_message">Select widget to add (always added before query):</string>
+    <string name="preferences_home_screen_widget_label">Widget</string>
+    <string name="preferences_home_screen_command_label">Command</string>
+
+    <!-- Preferences item, widgets related messages -->
+    <string name="preferences_widget_height_px">Height (px)</string>
+    <string name="preferences_widget_minimum_height_show">Minimum Height: %1$d px</string>
+    <string name="preferences_widget_default_height_show">Default Height: %1$d px</string>
+    <string name="preferences_widget_configure_the_widget">Configure the widget</string>
+
+    <!-- Preferences item, widget commands related messages -->
+    <string name="preferences_command_widget_command_add">Add widget command</string>
+    <string name="preferences_command_widget_command_new_label">New widget command</string>
+    <string name="preferences_command_widget_command_save_and_select_widget">Save and select widget</string>
+    <string name="preferences_command_widget_command_command">Command name</string>
+    <string name="preferences_command_widget_command_abbreviation">Command name can be abbreviated</string>
+    <string name="preferences_command_widget_command_abbreviable_label">Abbreviable</string>
+
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">Invalid URL: must start with https:// or http:// and at least one more slash (\"/\").</string>
-    <string name="error_invalid_url_command_name">Invalid name: command cannot include space, and must not be empty</string>
+    <string name="error_invalid_command_name">Invalid name: command cannot include space, and must not be empty</string>
     <string name="error_empty_display_name">Display name is empty</string>
 
     <!-- Error messages, system errors -->
     <string name="error_failure_could_not_start_command">ERROR: could not start command</string>
     <string name="error_failure_not_found_opening_application_with_class">\"%1$s\" is not a launchable package.</string>
+    <string name="error_failure_could_not_connect_to_the_widget">ERROR: could not connect to the widget</string>
 
     <!-- Error messages, app internal errors -->
     <string name="error_calculator_internal_error">Unknown calculator internal error</string>
@@ -120,6 +152,13 @@
     <string name="startup_help_body_part2" translatable="false">help</string>
     <string name="startup_help_body_part3">to see what to do.</string>
     <string name="startup_help_check_never_later">Don\'t show this message again</string>
+
+    <!-- Migration message -->
+    <string name="migration_lost_happened_message">
+        Data seems to be restored outside of Blue Line Console.
+        \n
+        \nWidgets cannot be migrated and are lost. Reconfigure widget settings from config if necessary.
+    </string>
 
     <!-- Help -->
     <string name="app_help_text">
