--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -52,7 +52,7 @@
     <string name="preferences_title_for_header_and_footer_edit_custom_urls">编辑 URL</string>
     <string name="preferences_title_for_header_and_footer_widget_commands">小部件命令</string>
     <string name="preferences_title_for_header_and_footer_accent_color">强调色</string>
-    <string name="preferences_title_for_header_home_screen_default_items">主屏</string>
+    <string name="preferences_title_for_header_home_screen_default_items">主屏幕</string>
     <string name="preferences_title_for_footer_home_screen_default_items">默认项目</string>
     <string name="preferences_title_for_header_and_footer_home_screen_add_widget">添加小部件</string>
     <string name="preferences_title_for_header_and_footer_widget">小部件</string>
