--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -26,6 +26,9 @@
     <string name="theme_name_marine">海洋色</string>
     <string name="theme_name_old_computer">旧电脑</string>
 
+    <!-- Widgets -->
+    <string name="widget_launcher_label">Blue Line Console 快捷方式</string>
+
     <!-- String match strategies -->
     <string name="string_match_strategy_substring">正常</string>
     <string name="string_match_strategy_skipped_substring">跳跃子字符串（如，搜索 \"abd\" 显示 \"abcdef\"）</string>
@@ -121,7 +124,7 @@
     <!-- Preferences item, widgets related messages -->
     <string name="preferences_widget_height_px">高度 （px）</string>
     <string name="preferences_widget_minimum_height_show">最小高度：%1$d px</string>
-    <string name="preferences_widget_default_height_show">默认高度： %1$d px</string>
+    <string name="preferences_widget_default_height_show">默认高度：%1$d px</string>
     <string name="preferences_widget_configure_the_widget">配置小部件</string>
 
     <!-- Preferences item, widget commands related messages -->
