--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,7 +27,7 @@
     <string name="theme_name_old_computer">旧电脑</string>
 
     <!-- Widgets -->
-    <string name="widget_launcher_label">Blue Line Console shortcut</string>
+    <string name="widget_launcher_label">Blue Line Console 快捷方式</string>
 
     <!-- String match strategies -->
     <string name="string_match_strategy_substring">正常</string>
