--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -67,7 +67,7 @@
     <string name="preferences_category_urls">网页和搜索</string>
     <string name="preferences_category_custom_commands">定制命令</string>
     <string name="preferences_category_home_screen">主屏幕</string>
-    <string name="preferences_category_contacts">Contacts</string>
+    <string name="preferences_category_contacts">联系人</string>
     <string name="preferences_category_advanced">高级</string>
 	
     <!-- Preferences items, main screen -->
@@ -91,8 +91,8 @@
     <string name="preferences_item_custom_commands_widgets">小部件命令（实验性）</string>
     <string name="preferences_item_home_screen_default_items">主屏项目</string>
     <string name="preferences_item_home_screen_default_items_summary">在 Blue Line Console 被设为启动器的情况下，当主屏幕上没有任何输入时，显示结果和小部件。</string>
-    <string name="preferences_item_contacts_enable_search">Enable contact search</string>
-    <string name="preferences_item_contacts_search_permission_explanation">Enabling contact search requires permission to read Contacts. You may be asked to grant the access.</string>
+    <string name="preferences_item_contacts_enable_search">启用联系人搜索</string>
+    <string name="preferences_item_contacts_search_permission_explanation">搜索联系人需要有“联系人”的读取权限。您可能会被要求授予访问权限。</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">在命令输入窗口上通知英语输入到键盘输入软件</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">命令输入窗口使用 setImeHintLocales 并设为英语语言环境。不同的键盘输入软件有不同的行为。</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">在命令输入窗口上设置 IME_FLAG_FORCE_ASCII  标志</string>
@@ -139,8 +139,8 @@
     <string name="preferences_command_widget_command_abbreviable_label">缩写</string>
 
     <!-- Contact search -->
-    <string name="contacts_action_dial_phone_number">Dial: %1$s</string>
-    <string name="contacts_action_email">E-mail: %1$s</string>
+    <string name="contacts_action_dial_phone_number">电话： %1$s</string>
+    <string name="contacts_action_email">电子邮件：%1$s</string>
 
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">无效的 URL：必须以 https:// 或 http:// 开头且至少再多一条斜杠(\"/\").</string>
