--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -120,7 +120,7 @@
     <!-- Preferences item, home screen default items screens -->
     <string name="preferences_home_screen_add_command_button">コマンドを追加する</string>
     <string name="preferences_home_screen_add_widget_button">ウィジェットを追加する（実験的機能）</string>
-    <string name="preferences_home_screen_add_widget_select_message">追加するウィジェットを選択してください（必ずコマンドの前に追加されます）</string>
+    <string name="preferences_home_screen_add_widget_select_message">追加するウィジェットを選択してください</string>
     <string name="preferences_home_screen_widget_label">ウィジェット</string>
     <string name="preferences_home_screen_command_label">コマンド</string>
 
