--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,7 @@
     <!-- Preferences item, home screen default items screens -->
     <string name="preferences_home_screen_add_command_button">Add command</string>
     <string name="preferences_home_screen_add_widget_button">Add widget (experimental)</string>
-    <string name="preferences_home_screen_add_widget_select_message">Select widget to add (always added before query):</string>
+    <string name="preferences_home_screen_add_widget_select_message">Select widget to add:</string>
     <string name="preferences_home_screen_widget_label">Widget</string>
     <string name="preferences_home_screen_command_label">Command</string>
 
