--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -44,6 +44,9 @@
     <string name="button_close">閉じる</string>
     <string name="button_increment_minimal">+</string>
     <string name="button_decrement_minimal">-</string>
+    <string name="rgb_color_red">赤</string>
+    <string name="rgb_color_green">緑</string>
+    <string name="rgb_color_blue">青</string>
 
     <!-- Preferences general notes -->
     <string name="note_take_effect_after_restart">Blue Line Console の再起動後に反映されます。</string>
@@ -112,9 +115,6 @@
     <!-- Preferences items, accent color screens -->
     <string name="preferences_accent_color_theme_default">テーマの初期設定</string>
     <string name="preferences_accent_color_custom">色を設定</string>
-    <string name="preferences_accent_color_red">赤</string>
-    <string name="preferences_accent_color_green">緑</string>
-    <string name="preferences_accent_color_blue">青</string>
     <string name="preferences_accent_color_theme_without_accent_color">ご利用中のテーマ（%1$s）ではアクセントカラーの変更はできません。</string>
 
     <!-- Preferences item, home screen default items screens -->
