--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -197,7 +197,7 @@
 		\n
         \nOther commands:
         \n
-        \n-&#032;Color code (like #4d68ff)
+        \n-&#032;颜色代码 (比如，#4d68ff)
         \n
         \n搜索引擎名称可以缩写。
         \n比如， \"d somequery\" 等同于 \"duckduckgo somequery\"。
