--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -195,7 +195,7 @@
         \n
         \n-&#032;ping &lt;host&gt;, ping6 &lt;host&gt;　（仅在有相应命令的系统上可用）
 		\n
-        \nOther commands:
+        \n其他命令：
         \n
         \n-&#032;颜色代码 (比如，#4d68ff)
         \n
