--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -187,6 +187,7 @@
         \n-&#032;help
         \n-&#032;config
         \n-&#032;date
+        \n-&#032;all_apps
         \n-&#032;bing &lt;query&gt;
         \n-&#032;duckduckgo &lt;query&gt;
         \n-&#032;google &lt;query&gt;
